# postg-orm

./: .gitignore  README.md  pyproject.toml
pgorm/: __init__.py  _base.py  _exception.py  connect.py  fields.py  model.py  pg_orm.py
tests/: test_model.py  test_pgorm.py
